--- a/src/components/WorkflowInterface/styles/WorkflowInterface.css
+++ b/src/components/WorkflowInterface/styles/WorkflowInterface.css
@@ -67,8 +67,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: white;
-  color: #111827;
+  
+  color: white;
   border-radius: 50%;
   cursor: pointer;
   z-index: 200;
